Fix: display 4 raws of cards on screens > 768px & 5 raws on smaller than 768px

--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -78,7 +78,7 @@
 	font-size: 11px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 989px) {
 	.card {
 		width: 339px;
 		height: 257px;
