--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -30,7 +30,7 @@
 	line-height: 22px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 989px) {
 	.movies-card-list {
 		padding: 70px 30px 30px;
 		row-gap: 36px;
@@ -49,7 +49,6 @@
 	}
 
 	.movies-card-list__button {
-		margin: 50px 10px 80px;
 		width: 300px;
 	}
 
